# h5py

./: .authors.yml  .buildinfo  .coveragerc  .doctr-files  .gitignore  .hgignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  ANN.rst  ANN.txt  AUTHORS  CHANGES.txt  CITATION  CNAME  DNM_build_test.sh  INSTALL.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  README.txt  TODO.txt  api_gen.py  appveyor.yml  asv.conf.json  autotest.py  azure-ci.yml  azure-pipelines.yml  c2py.py  codecov.yml  configure.py  corip-readme  detect.c  detect.py  dev-install.sh  docs.cfg  genindex.html  github_deploy_key_h5py_h5py.enc  (+41 more)
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md  zizmor.yaml
_custom_build/: backend.py
_sources/: h5d.rst.txt  h5ds.rst.txt  h5g.rst.txt  h5i.rst.txt  h5pl.rst.txt  h5t.rst.txt  h5z.rst.txt
_static/: documentation_options.js  nature.css
benchmarks/: README.rst  asv.conf.json  benchmark_datatype.py  benchmark_slicing.py  benchmarks.py
build_helpers/: api_gen.py  config.py  template.py
ci/: azure-pipelines-steps.yml  azure-pipelines-test-wheels.yml  azure-pipelines-wheels.yml  build-arm64-wheels.sh  bundle_hdf5_whl.py  cibw_before_all_macos.sh  cibw_before_all_windows.sh  cibw_before_build.sh  cibw_test_command.sh  configure_hdf5_mac.sh  fix_paths.py  get_hdf5.py  get_hdf5_arm64.sh  get_hdf5_if_needed.sh  get_hdf5_win.py  get_zlib_amd64.sh  get_zlib_windows.sh  osx_cross_configure.patch  osx_cross_src_makefile.patch  patched_CMakeFilters.cmake  test-build-numpy.sh  triage_build.sh  upload_coverage.py  upload_wheels.sh
docs/: API.html  DOCS_LICENSE.txt  Docs.html  Makefile  Manual.html  benchmark.rst  build.rst  conf.py  config.rst  contributing.rst  faq.rst  index.rst  info.txt  licenses.rst  low.rst  mpi.rst  quick.rst  refs.rst  related_projects.rst  release_guide.rst  requirements-rtd.txt  special.rst  strings.rst  swmr.rst  threads.rst  vds.rst  windows_build.txt
docs_api/: Makefile  automod.py  conf.py  h5.rst  h5a.rst  h5ac.rst  h5d.rst  h5ds.rst  h5f.rst  h5fd.rst  h5g.rst  h5o.rst  h5p.rst  h5s.rst  h5t.rst  index.rst
doctr/: .doctr-files  genindex.html  h5ac.html  h5d.html  h5f.html  h5i.html  h5l.html  h5o.html  h5p.html  h5pl.html  h5r.html  h5s.html  h5t.html  objects.html  objects.inv  (+2 more)
h5py/: __init__.py  _conv.pxd  _conv.pyi  _conv.pyx  _conv.pyx.template  _conv.templ.pyx  _errors.pxd  _errors.pyi  _errors.pyx  _errors.pyx.template  _errors.templ.pxd  _errors.templ.pyx  _extras.py  _ipy_completer.py  _locks.pxi  _locks.pyi  _npystrings.pyi  _npystrings.pyx  _npystrings.templ.pyx  _objects.pxd  _objects.pyi  _objects.pyx  _objects.templ.pyx  _proxy.pxd  _proxy.pyi  _proxy.pyx  _proxy.templ.pyx  _reader.pyx  _selector.pyi  _selector.pyx  _stub.py  _sync.py  _tconv.c  _tconv.h  api_compat.h  api_functions.txt  api_gen.py  api_hdf5.pxd  api_types_ext.pxd  api_types_ext.pxd.template  (+123 more)
h5py/_hl/: __init__.py  attrs.py  base.py  blosc2.py  compat.py  compat.pyi  dataset.py  datatype.py  datetime64_register.py  dims.py  files.py  filters.py  filters.pyi  group.py  plist.py  selections.py  selections2.py  shared.py  vds.py  vol.py
h5py/_hl/tests/: common.py  test_attrs.py  test_attrs_data.py  test_base.py  test_dataset.py  test_datatype.py  test_dimension_scales.py  test_file.py  test_group.py  test_selections.py  test_slicing.py
h5py/_ipython/: __init__.py  completer.py  formatter.py  utils.py
h5py/auto/: auto_api.py  auto_functions.txt  config.pxi  hdf5_types.pxd
h5py/lowtest/: test_h5.py  test_h5f.py  test_h5p.py  test_h5t.py  test_objects.py
h5py/lzf/: lzfP.h
h5py/tests/: __init__.py  common.py  conftest.py  test_attribute_create.py  test_attrs.py  test_attrs_data.py  test_aync.py  test_base.py  test_big_endian_file.py  test_completions.py  test_conv.py  test_dataset.py  test_dataset_getitem.py  test_dataset_swmr.py  test_datatype.py  test_datatype2.py  test_deprecation.py  test_dimension_scales.py  test_dims_dimensionproxy.py  test_dtype.py  test_errors.py  test_file.py  test_file2.py  test_file_alignment.py  test_file_image.py  test_filters.py  test_group.py  test_group_swmr.py  test_h5.py  test_h5a.py  test_h5d.py  test_h5d_direct_chunk.py  test_h5f.py  test_h5g.py  test_h5i.py  test_h5o.py  test_h5p.py  test_h5pl.py  test_h5r.py  test_h5s.py  (+16 more)
h5py/tests/data/: attributes.hdf5  smpl_compound_chunked.hdf5  strings.h5  vlstra.h5
h5py/tests/data_files/: compound-dtype-complex.h5
h5py/tests/high/: test_dataset.py  test_file.py  test_group.py  test_hlobject.py  test_links.py  test_refs.py  test_slicing.py  test_threads.py  test_vlen.py
h5py/tests/hl/: __init__.py  test_attribute_create.py  test_completions.py  test_dataset_getitem.py  test_dataset_swmr.py  test_datatype.py  test_deprecation.py  test_dims_dimensionproxy.py  test_file.py  test_filters.py  test_mpi_collective.py  test_threads.py
h5py/tests/hl/test_vds/: __init__.py  test_eiger_high_level.py  test_eiger_low_level.py  test_excalibur_high_level.py  test_excalibur_low_level.py  test_highlevel_vds.py  test_lowlevel_vds.py  test_percival_high_level.py  test_percival_low_level.py  test_virtual_source.py
h5py/tests/hl/vds_tests/: test_eiger_high_level.py  test_eiger_low_level.py  test_excalibur_high_level.py  test_excalibur_low_level.py  test_percival_high_level.py  test_percival_low_level.py  test_virtual_source.py
h5py/tests/low/: __init__.py  test_h5.py  test_h5a.py  test_h5d.py  test_h5f.py  test_h5g.py  test_h5i.py  test_h5p.py  test_h5r.py  test_h5s.py  test_h5t.py  test_utils.py
h5py/tests/old/: __init__.py  common.py  test_attrs.py  test_attrs_data.py  test_base.py  test_dataset.py  test_datatype.py  test_dimension_scales.py  test_file.py  test_file_image.py  test_group.py  test_h5.py  test_h5d_direct_chunk.py  test_h5d_direct_chunk_write.py  test_h5f.py  test_h5p.py  test_h5pl.py  test_h5t.py  test_objects.py  test_selections.py  test_slicing.py
h5py/tests/test_vds/: __init__.py  test_highlevel_vds.py  test_lowlevel_vds.py  test_virtual_source.py
h5py/tests/types/: __init__.py  test_conv.py  test_types.py
(+430 files in other folders)
